tests/src/frontend/typechecking/invalid/mutable_static_call.sk
mutable class Foo(mutable x: Int) {
  static fun new(): this {
    static(0)
  }
}

fun no(): void {
  _ = mutable Foo::new();
  void
}
